[tool.poetry]
name = "langchain-ui-api"
version = "0.1.0"
description = ""
authors = ["Curtis Ruck"]
readme = "README.md"
packages = [{include = "langchain_ui_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.95.1"}
uvicorn = {extras = ["standard"], version = "^0.22.0"}
gunicorn = "^20.1.0"
langchain = "^0.0.161"
openai = "^0.27.6"
requests = "^2.30.0"
python-dotenv = "^1.0.0"
python-decouple = "^3.8"
pydantic = "^1.10.7"
supabase = "^1.0.3"
sse-starlette = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
